fix(mcp): deterministic tools/list ordering across JVMs
GraphMcpServer stored tools in Map.copyOf(...), whose iteration order is
unspecified, so tools/list returned tools in a JVM/OS-dependent order —
GraphMcpServerTest.toolsListExposesRegisteredToolsWithSchemas passed on
ubuntu/windows but failed on macos and the eval-gate runner. Back the map
with an insertion-ordered LinkedHashMap so registration order is preserved.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>